--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "flickity": "^2.0.3"
   },
   "devDependencies": {
     "jribbble": "^2.0.4"
