--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^3.0.3",
+    "gulp-rsync": "0.0.6",
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "node-bourbon": "^4.2.8",
