--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-rsync": "0.0.6",
