--- a/bower.json
+++ b/bower.json
@@ -16,12 +16,12 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "jquery": "^3.1.0",
     "flickity": "^2.0.3",
     "jribbble": "^2.0.4",
-    "modular-scale": "^2.1.3"
+    "modular-scale": "^2.1.3",
+    "waypoints": "^4.0.1"
   }
 }
